<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.AboutActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/text_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="N/A"
                android:textAlignment="center"
                android:textSize="11sp" />

            <Button
                android:id="@+id/about_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_button"
                android:text="@string/about_note"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/about_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_button"
                android:text="@string/about_github"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/about_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_button"
                android:text="@string/about_project"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>