<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.MainActivity"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="90dp"
                    android:layout_marginBottom="90dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/edit_search"
                            android:layout_width="160dp"
                            android:layout_height="48dp"
                            android:hint="@string/text_searchbox" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleType="center"
                            android:src="@mipmap/ic_launcher_foreground" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <Button
                            android:id="@+id/menu_history"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#303030"
                            android:text="@string/menu_history"
                            android:textColor="#FFFFFF" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <Button
                            android:id="@+id/menu_bookmark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#303030"
                            android:text="@string/menu_bookmark"
                            android:textColor="#FFFFFF" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>